# ImpulsAO-Creator

./: .gitignore  Cargo.toml  License  README.md
.github/workflows/: windows.yml
output/data/: 201901.json  202102.json  test.json
src/: main.rs
