[package]
name = "Impuls_ao_Creator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
json_value_merge = "1.1"
image = "0.24.5"
image_compressor = "1.2.3"